--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="New Soko e-commerce website, purchase New, used & remanufactured parts
+      Outboard engines, parts & accessories"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Mail Inbox</title>
+    <title>New Soko</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
